<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="sort_by">Sort By</string>
    <string name="no_data_found">No Data Found</string>
    <string name="truck_no">Truck No</string>
    <string name="weight">Weight</string>
    <string name="no_of_bags">No of Bags</string>
    <string name="date">Date</string>
    <string name="next">NEXT</string>
    <string name="reject">Reject</string>
    <string name="pre_sampling">Pre-Sampling</string>
    <string name="origin">Origin</string>
    <string name="kor">KOR</string>
    <string name="count">Count</string>
    <string name="bag_refraction_type">Bag Refraction Type</string>
    <string name="torn">Torn</string>
    <string name="humid">Humid</string>
    <string name="recondition">Recondition</string>
    <string name="total">Total</string>
    <string name="proceed">proceed</string>
    <string name="truck">Truck</string>
    <string name="storage_location">Storage Location</string>
    <string name="other_location">Other Location</string>
    <string name="suggested_location">Suggested Location</string>
    <string name="recondition_bags">Recondition Bags</string>
    <string name="supplier">Supplier</string>
    <string name="truck_list">Truck List</string>
    <string name="offloading">Offloading</string>
    <string name="mtn_r">MTN-R</string>
    <string name="weigh_bridge_id">Weigh Bridge ID</string>
    <string name="offloading_truck_list">Offloading - Truck List - </string>
    <string name="offloading_presampling">Offloading - Pre-Sampling - </string>
    <string name="offloading_summary">Offloading - Summary - </string>
    <string name="bag_refraction">Bag Refraction</string>
    <string name="accept">Accept</string>
    <string name="confirm">Confirm</string>
    <string name="total_bags">Total Bags</string>
    <string name="quality_saved">Quality Saved Successfully</string>
    <string name="quality_reject">Consignment has been Rejected</string>
    <string name="offloading_saved">Offloading Successful</string>
    <string name="offloading_reject">Offloading Rejected Successfully</string>
    <string name="offloading_saved_offline">Offline Offloading Saved Successfully</string>
    <string name="quality_success_offline">Offline Offloading Saved Successfully</string>
    <string name="new_lot_id_created">New LOT id has been successfully created \n</string>
    <string name="select_location">Select Location</string>
    <string name="confirm_message">Do you want save pre-sampling data?</string>
    <string name="confirm_offloading">Confirm Offloading</string>
    <string name="confirm_reject_message">Do you want reject pre-sampling data?</string>
    <string name="batch_number">Batch Number</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="truck_id">Truck ID :</string>
    <string name="enter_batch_no">Enter Batch Number</string>
    <string name="enter_kor_origin">Enter KOR or Origin</string>
    <string name="enter_stroage_location">Enter Stroage Location</string>
    <string name="enter_no_of_bags">Enter no of bags</string>
    <string name="receiving">Receiving</string>
    <string name="or">OR</string>

</resources>