<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryOfi"
        android:orientation="horizontal"
        android:padding="@dimen/text_size_medium">

        <TextView
            android:id="@+id/truck_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gt_walsheim_pro_regular"
            android:text="@string/offloading_presampling"
            android:textColor="@color/warm_white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/warm_white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTruckID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:padding="@dimen/text_size_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        tools:text="Truck Id:123123875348573" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90">


        <LinearLayout
            android:id="@+id/llItemView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_padding_size_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBatchNoLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gt_walsheim_pro_bold"
                    android:text="@string/batch_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etBatchNo"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edit_text"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:fontFamily="@font/gt_walsheim_pro_bold"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="10"
                    android:paddingStart="@dimen/margin_very_small"
                    android:paddingEnd="@dimen/margin_very_small"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gt_walsheim_pro_bold"
                android:paddingBottom="@dimen/margin_medium"
                android:text="@string/pre_sampling"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPreSampling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:visibility="visible"
                tools:listitem="@layout/item_vega_offloading_presampling" />

            <LinearLayout
                android:id="@+id/llSuggLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/suggested_location"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSuggLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    tools:listitem="@layout/item_vega_offloading_presampling" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:background="@color/grey_dark" />

                    <TextView
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="@dimen/layout_width"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:background="@color/grey_dark" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/other_location"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    tools:listitem="@layout/item_vega_offloading_presampling" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/rvBagRefractionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/bag_refraction"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvBagRefraction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_vega_offloading_presampling" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTotalBag"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/layout_border"
                        android:gravity="start"
                        android:padding="@dimen/margin_padding_size_medium"
                        android:text="@string/total_bags"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvBagsCount"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_grey_border"
                        android:padding="@dimen/margin_padding_size_medium"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llItemBottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnReject"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_cancel"
                android:drawablePadding="@dimen/margin_medium"
                android:gravity="center"
                android:padding="@dimen/margin_medium"
                android:text="@string/reject"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAccept"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryOfi"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                android:drawablePadding="@dimen/margin_medium"
                android:drawableTint="@color/white"
                android:padding="@dimen/margin_medium"
                android:text="@string/accept"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,UnusedAttribute" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryOfi"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:visibility="gone"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data_found"
        android:textColor="@color/warmgrey"
        android:visibility="gone" />

</LinearLayout>