<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:focusable="true"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:background="@color/warm_white">

        <LinearLayout
            android:id="@+id/llSortBy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryOfi"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small">


            <TextView
                android:layout_marginStart="@dimen/margin_medium"
                android:id="@+id/tvType"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="@color/warm_white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginEnd="@dimen/margin_medium"
                android:id="@+id/ivSortDownUp"
                android:layout_width="30dp"
                android:padding="3dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:contentDescription="@string/bag_refraction_type"
                android:src="@drawable/ic_sort_white" />

        </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truck_list"
        android:padding="@dimen/margin_mic_small"
        android:fontFamily="@font/gt_walsheim_pro_regular"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWeighbridge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_mic_small"
        tools:listitem="@layout/item_vega_offloading_truck_list" />

    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fontFamily="@font/gt_walsheim_pro_bold"
        android:text="@string/no_data_found"
        android:textSize="@dimen/text_size_large"
        android:visibility="gone" />

</LinearLayout>