<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_medium"
    android:layout_marginEnd="@dimen/margin_medium">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:layout_toEndOf="@+id/cbSelectStocks"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/truck_no"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_xmedium"
                tools:ignore="RelativeOverlap,RtlSymmetry" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/weigh_bridge_id"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_xmedium"
                tools:ignore="RelativeOverlap,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTruckNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_xmedium"
                android:textStyle="bold"
                tools:text="19393024892" />

            <TextView
                android:id="@+id/tvWeighBridgeId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_xmedium"
                android:textStyle="bold"
                tools:text="19393024892" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_mic_small">

            <TextView
                android:id="@+id/tvdifference"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/text_black"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/roboto_medium"
                android:visibility="gone"
                android:textColor="@color/text_black"
                android:layout_height="wrap_content"
                android:text="@string/weight" />


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/text_black"
                android:layout_height="wrap_content"
                android:text="@string/date" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_mic_small">

            <TextView
                android:id="@+id/tvSupplierName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="LBA" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/text_black"
                android:visibility="gone"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_bold"
                android:layout_height="wrap_content"
                tools:text="1000" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/roboto_bold"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="10/10/2020" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>